# Dear-imgui-custom-mods

./: .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  clippy.toml  deny.toml  rust-toolchain.toml  rustfmt.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
benches/: color_packing.rs  theme_dispatch.rs
docs/: FUTURE_MODULES.md  app_window.md  borderless_window.md  code_editor.md  code_editor_audit.md  component_proposals.md  confirm_dialog.md  diff_viewer.md  disasm_view.md  file_manager.md  force_graph.md  force_graph_roadmap.md  hex_viewer.md  knowledge_graph_spec.md  nav_panel.md  node_graph.md  notifications.md  page_control.md  proc_mon.md  property_inspector.md  status_bar.md  theme.md  timeline.md  toolbar.md  virtual_table.md  virtual_tree.md
examples/: demo_app_window.rs  demo_borderless.rs  demo_code_editor.rs  demo_diff_viewer.rs  demo_disasm_view.rs  demo_file_manager.rs  demo_force_graph.rs  demo_hex_viewer.rs  demo_knowledge_graph.rs  demo_nav_panel.rs  demo_node_graph.rs  demo_page_control.rs  demo_proc_mon.rs  demo_property_inspector.rs  demo_status_toolbar.rs  demo_table.rs  demo_timeline.rs  demo_tree.rs
proptest-regressions/hex_viewer/: mod.txt
src/: icons.rs  lib.rs
src/app_window/: config.rs  gpu.rs  mod.rs  state.rs  style.rs
src/borderless_window/: actions.rs  config.rs  mod.rs  platform.rs  state.rs  theme.rs
src/code_editor/: buffer.rs  config.rs  find_replace.rs  fold.rs  helpers.rs  mod.rs  token.rs  tokenizer.rs  undo.rs  wrap.rs
src/code_editor/lang/: asm.rs  hex.rs  json.rs  mod.rs  rhai.rs  rust.rs  toml.rs  xml.rs  yaml.rs
src/confirm_dialog/: config.rs  mod.rs  theme.rs
src/demo/: mod.rs
src/diff_viewer/: config.rs  diff.rs  mod.rs
src/disasm_view/: config.rs  mod.rs
src/file_manager/: config.rs  entry.rs  favorites.rs  history.rs  mod.rs  render.rs
src/fonts/: mod.rs
src/force_graph/: config.rs  data.rs  event.rs  filter.rs  mod.rs  sidebar.rs  style.rs
src/force_graph/layout/: community.rs  mod.rs
src/force_graph/metrics/: centrality.rs  mod.rs  pagerank.rs
src/force_graph/render/: camera.rs  export.rs  groups.rs  interaction.rs  minimap.rs  mod.rs  visibility.rs
src/force_graph/sim/: barnes_hut.rs  collision.rs  mod.rs  spring.rs
src/hex_viewer/: config.rs  mod.rs
src/input/: keyboard.rs  mod.rs
src/knowledge_graph/: config.rs  data.rs  event.rs  filter.rs  mod.rs  sidebar.rs  style.rs
src/knowledge_graph/metrics/: centrality.rs  pagerank.rs
src/knowledge_graph/render/: camera.rs  edge_bundle.rs  groups.rs  interaction.rs  labels.rs  mod.rs  visibility.rs
src/knowledge_graph/sim/: barnes_hut.rs  collision.rs  mod.rs  spring.rs
src/nav_panel/: config.rs  mod.rs  state.rs  theme.rs
src/node_graph/: config.rs  graph.rs  mod.rs  state.rs  types.rs  viewer.rs
src/node_graph/render/: grid.rs  input.rs  math.rs  mod.rs  nodes.rs  overlays.rs  wires.rs
src/notifications/: config.rs  icons.rs  mod.rs  theme.rs
src/page_control/: config.rs  mod.rs  render.rs
src/proc_mon/: config.rs  core.rs  mod.rs  types.rs  ui.rs
src/property_inspector/: config.rs  mod.rs  value.rs
src/status_bar/: config.rs  mod.rs
src/theme/: dark.rs  light.rs  midnight.rs  mod.rs  monokai.rs  solarized.rs
src/timeline/: config.rs  mod.rs  span.rs  track.rs
src/toolbar/: config.rs  mod.rs
src/utils/: clipboard.rs  color.rs  export.rs  glob.rs  mod.rs  text.rs
src/virtual_table/: column.rs  config.rs  edit.rs  mod.rs  ring_buffer.rs  row.rs  sort.rs
src/virtual_tree/: arena.rs  config.rs  drag.rs  filter.rs  flat_view.rs  mod.rs  node.rs  sort.rs
tests/: builder_chains.rs  reexports.rs  theme_api.rs
