[package]
name = "dear-imgui-custom-mod"
version = "0.8.0"
edition = "2024"
rust-version = "1.94"
description = "Custom UI components for dear-imgui-rs"

[dependencies]
dear-imgui-rs = "0.11.0"
dear-imgui-wgpu = "0.11.0"
dear-imgui-winit = "0.11.0"
foldhash = "0.2.0"
pollster = "0.4.0"
wgpu = "29.0.1"
winit = "0.30.13"

[dev-dependencies]
# Microbenchmarks via Criterion — gate behind the `bench` runner so
# regular `cargo test` stays fast.
criterion = { version = "0.7", features = ["html_reports"] }

[[bench]]
name = "theme_dispatch"
harness = false

[[bench]]
name = "color_packing"
harness = false

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = [
    "Win32_Storage_FileSystem",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Gdi",
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
] }

[[example]]
name = "demo_table"
path = "examples/demo_table.rs"

[[example]]
name = "demo_node_graph"
path = "examples/demo_node_graph.rs"

[[example]]
name = "demo_tree"
path = "examples/demo_tree.rs"

[[example]]
name = "demo_code_editor"
path = "examples/demo_code_editor.rs"

[[example]]
name = "demo_hex_viewer"
path = "examples/demo_hex_viewer.rs"

[[example]]
name = "demo_disasm_view"
path = "examples/demo_disasm_view.rs"

[[example]]
name = "demo_file_manager"
path = "examples/demo_file_manager.rs"

[[example]]
name = "demo_page_control"
path = "examples/demo_page_control.rs"

[[example]]
name = "demo_timeline"
path = "examples/demo_timeline.rs"

[[example]]
name = "demo_diff_viewer"
path = "examples/demo_diff_viewer.rs"

[[example]]
name = "demo_property_inspector"
path = "examples/demo_property_inspector.rs"

[[example]]
name = "demo_status_toolbar"
path = "examples/demo_status_toolbar.rs"

[[example]]
name = "demo_borderless"
path = "examples/demo_borderless.rs"
